--- a/package.json
+++ b/package.json
@@ -7,13 +7,22 @@
     "serve": "vite preview"
   },
   "dependencies": {
-    "@headlessui/vue": "^0.3.1",
+    "@feathersjs/authentication-client": "^4.5.11",
+    "@feathersjs/feathers": "^4.5.11",
+    "@feathersjs/socketio-client": "^4.5.11",
+    "@feathersjs/vuex": "^4.0.1-pre.7",
+    "@headlessui/vue": "^1.0.0",
+    "@heroicons/vue": "^1.0.1",
+    "@tailwindcss/forms": "^0.3.2",
     "@tailwindcss/jit": "^0.1.18",
     "autoprefixer": "^10.2.5",
+    "feathers-hooks-common": "^5.0.5",
     "postcss": "^8.2.10",
+    "socket.io-client": "^2.4.0",
     "tailwindcss": "^2.1.1",
     "vue": "^3.0.5",
-    "vue-router": "^4.0.6"
+    "vue-router": "^4.0.6",
+    "vuex": "^4.0.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^1.2.1",
